refactor swagger for different request and response bodies
for request we need minimal info regarding a Cart Product (just the quantity and the productId) whereas in Response we wanna provide as much info as possible to make it easier for the clients.
